force-app/main/default/objects/FieldsperRecordType__mdt/FieldsperRecordType__mdt.object-meta.xml
<CustomObject>
    <description>PacPoint-MV122818 - Created for BREG phase 1. Created to display the fields on the community flow that need to be captured by the user</description>
    <label>Fields per Record Type</label>
    <pluralLabel>Fields per Record Type</pluralLabel>
</CustomObject>