force-app/main/default/objects/FieldsperRecordType__mdt/fields/DefaulValue__c.field-meta.xml
<CustomField>
    <fullName>DefaulValue__c</fullName>
    <description>PacPoint-MV010319 - Created for BREG phase 1</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>