force-app/main/default/objects/FieldsperRecordType__mdt/fields/Editable__c.field-meta.xml
<CustomField>
    <fullName>Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV010319 - Created for BREG phase 1</description>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>