force-app/main/default/objects/FieldsperRecordType__mdt/fields/FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>FieldLabel__c</fullName>
    <description>PacPoint-MV122818 - Created for BREG phase 1</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>