force-app/main/default/objects/FieldsperRecordType__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>PacPoint-MV122818 - Created for BREG phase 1</description>
    <label>Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>