force-app/main/default/objects/FieldsperRecordType__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <description>PacPoint-MV010319 - Created for BREG phase 1</description>
    <label>Record Type</label>
    <referenceTo>FlowperRecordType__mdt</referenceTo>
    <relationshipName>Editable_Fields_per_Record_Type</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>