force-app/main/default/objects/FieldsperRecordType__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV011319 - Created for BREG phase 1</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>